fix scroll in modals on iOS? #734

--- a/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
+++ b/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@@ -43,14 +43,8 @@
 }
 
 .modal-content {
-  display: flex;
-  flex-direction: column;
-  flex: 1 0 100%;
   position: static;
   height: 100%;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  -webkit-backface-visibility: hidden;
 
   &[class*=bg-] {
     &:before,
@@ -77,7 +71,21 @@
     }
   }
 
+  .form {
+    min-height: min-content;
+  }
+
   @include bg-fade();
+}
+
+.modal-scroller {
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  transform: translate3d(0,0,0);
+
+  > * {
+    min-height: min-content; // Will fix overflow on Safari.
+  }
 }
 
 .modal-header {
@@ -156,7 +164,8 @@
     &:after {
       @extend .modal-content[class*=bg-]:after;
 
-      height: 130%;
+      height: 110%;
+      border-radius: 0;
     }
 
     @include bg-fade();
@@ -167,6 +176,11 @@
       margin-left: ($grid-gutter-width / -2);
     }
   }
+}
+
+.tab-content {
+  display: flex;
+  flex-direction: column;
 }
 
 // We sometimes need to have a modal look but it's not really a modal
